...
                    <view key="view" contentMode="scaleToFill" id="YKo-GE-OnY">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ghx-KY-YD1">
                                <rect key="frame" x="248" y="234" width="104" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Post"/>
                                <state key="normal" title="Post a new wot"/>
                                <connections>
                                    <segue destination="Tsz-XH-3LM" kind="show" id="qel-eU-k3E"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GoM-hu-THq">
                                <rect key="frame" x="262" y="272" width="77" height="30"/>
                                <state key="normal" title="Show Wots"/>
                                <connections>
                                    <action selector="showWots" destination="WMJ-LH-bQs" eventType="touchUpInside" id="3hK-fH-0We"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="PHq-cO-ida">
                                <rect key="frame" x="236" y="92" width="128" height="124"/>
...
                                <connections>
                                    <outlet property="delegate" destination="Tsz-XH-3LM" id="8WL-py-0Ee"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1e0-LE-WOa">
                                <rect key="frame" x="68" y="161" width="326" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="content"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="Tsz-XH-3LM" id="X8M-u3-kFh"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZ2-SI-UFU">
                                <rect key="frame" x="20" y="221" width="374" height="30"/>
                                <state key="normal" title="Post!"/>
                                <connections>
                                    <action selector="postWot" destination="Tsz-XH-3LM" eventType="touchUpInside" id="zO4-NB-0M9"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip8-GV-Nv9">
                                <rect key="frame" x="20" y="165" width="31" height="21"/>
...
